CREATE TABLE "users" (
  "id" varchar PRIMARY KEY,
  "username" varchar(32) UNIQUE NOT NULL,
  "avatar" bytea,
  "status" varchar(16)
    CHECK (status IN ('online', 'offline')),
  "role" varchar(16) NOT NULL
    CHECK (role IN ('guest', 'user', 'admin')),
  "created_at" timestamptz DEFAULT now(),
  "updated_at" timestamptz DEFAULT now()
);

CREATE TABLE "followers" (
  "user_id" varchar NOT NULL,
  "followed_id" varchar NOT NULL,
    CHECK (user_id <> followed_id),
  "created_at" timestamptz DEFAULT now(),

  PRIMARY KEY ("user_id", "followed_id"),

  CONSTRAINT "followers_user_id_fkey"
    FOREIGN KEY ("user_id")
    REFERENCES "users" ("id")
    ON DELETE CASCADE,

  CONSTRAINT "followers_followed_id_fkey"
    FOREIGN KEY ("followed_id")
    REFERENCES "users" ("id")
    ON DELETE CASCADE
);

CREATE TABLE "recipes" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "title" varchar(256) NOT NULL,
  "description" text,
  "instructions" text NOT NULL,
  "servings" integer NOT NULL DEFAULT 1,
  "spiciness" smallint CHECK (spiciness BETWEEN 0 AND 3),
  "author_id" varchar NULL,
  "status" varchar(16) NOT NULL
    CHECK (status IN ('draft', 'published', 'archived')),
  "rating_avg" numeric(3,2)
    CHECK (rating_avg BETWEEN 1.00 AND 5.00),
  "rating_count" integer NOT NULL DEFAULT 0
    CHECK (rating_count >= 0),
  "created_at" timestamptz DEFAULT now(),
  "updated_at" timestamptz DEFAULT now(),

  CONSTRAINT "recipes_author_id_fkey"
    FOREIGN KEY ("author_id")
    REFERENCES "users" ("id")
    ON DELETE SET NULL
);

CREATE TABLE "ingredients" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "name" varchar(128) UNIQUE NOT NULL,
  "created_at" timestamptz DEFAULT now()
);

CREATE TABLE "units" (
  "code" varchar PRIMARY KEY,
  "kind" varchar NOT NULL
    CHECK (kind IN ('mass', 'volume', 'portion'))
);

CREATE TABLE "recipe_ingredients" (
  "recipe_id" integer NOT NULL,
  "ingredient_id" integer NOT NULL,
  "amount" numeric
    CHECK (amount > 0),
  "unit" varchar(16) NOT NULL,

  PRIMARY KEY ("recipe_id", "ingredient_id"),

  CONSTRAINT "recipe_ingredients_recipe_id_fkey"
    FOREIGN KEY ("recipe_id")
    REFERENCES "recipes" ("id")
    ON DELETE CASCADE,

  CONSTRAINT "recipe_ingredients_ingredient_id_fkey"
    FOREIGN KEY ("ingredient_id")
    REFERENCES "ingredients" ("id"),

  CONSTRAINT "recipe_ingredients_unit_fkey"
    FOREIGN KEY ("unit")
    REFERENCES "units" ("code")
);

CREATE TABLE "recipe_category_types" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "code" varchar(32) UNIQUE NOT NULL,
  "name" varchar(64) NOT NULL,
  "created_at" timestamptz DEFAULT now()
);

CREATE TABLE "recipe_categories" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "category_type_id" integer NOT NULL,
  "code" varchar(32) NOT NULL,
  "created_at" timestamptz DEFAULT now(),

  CONSTRAINT "recipe_categories_category_type_id_fkey"
    FOREIGN KEY ("category_type_id")
    REFERENCES "recipe_category_types" ("id")
);

CREATE TABLE "recipe_category_map" (
  "recipe_id" integer NOT NULL,
  "category_id" integer NOT NULL,

  PRIMARY KEY ("recipe_id", "category_id"),

  CONSTRAINT "recipe_category_map_recipe_id_fkey"
    FOREIGN KEY ("recipe_id")
    REFERENCES "recipes" ("id")
    ON DELETE CASCADE,

  CONSTRAINT "recipe_category_map_category_id_fkey"
    FOREIGN KEY ("category_id")
    REFERENCES "recipe_categories" ("id")
);

CREATE TABLE "ingredient_categories" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "code" varchar(32) UNIQUE NOT NULL,
  "created_at" timestamptz DEFAULT now()
);

CREATE TABLE "ingredient_category_correspondence" (
  "ingredient_id" integer NOT NULL,
  "category_id" integer NOT NULL,

  PRIMARY KEY ("ingredient_id", "category_id"),

  CONSTRAINT "ingredient_category_correspondence_ingredient_id_fkey"
    FOREIGN KEY ("ingredient_id")
    REFERENCES "ingredients" ("id"),

  CONSTRAINT "ingredient_category_correspondence_category_id_fkey"
    FOREIGN KEY ("category_id")
    REFERENCES "ingredient_categories" ("id")
);

CREATE TABLE "allergens" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "code" varchar(32) UNIQUE NOT NULL,
  "created_at" timestamptz DEFAULT now()
);

CREATE TABLE "allergen_categories" (
  "allergen_id" integer NOT NULL,
  "category_id" integer NOT NULL,

  PRIMARY KEY ("allergen_id", "category_id"),

  CONSTRAINT "allergen_categories_allergen_id_fkey"
    FOREIGN KEY ("allergen_id")
    REFERENCES "allergens" ("id"),

  CONSTRAINT "allergen_categories_category_id_fkey"
    FOREIGN KEY ("category_id")
    REFERENCES "ingredient_categories" ("id")
);

CREATE TABLE "user_allergens" (
  "user_id" varchar NOT NULL,
  "allergen_id" integer NOT NULL,
  "created_at" timestamptz DEFAULT now(),

  PRIMARY KEY ("user_id", "allergen_id"),

  CONSTRAINT "user_allergens_user_id_fkey"
    FOREIGN KEY ("user_id")
    REFERENCES "users" ("id")
    ON DELETE CASCADE,

  CONSTRAINT "user_allergens_allergen_id_fkey"
    FOREIGN KEY ("allergen_id")
    REFERENCES "allergens" ("id")
);

CREATE TABLE "diets" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "code" varchar(32) UNIQUE NOT NULL,
  "name" varchar(128) NOT NULL,
  "created_at" timestamptz DEFAULT now()
);

CREATE TABLE "diet_restricted_categories" (
  "diet_id" integer NOT NULL,
  "category_id" integer NOT NULL,

  PRIMARY KEY ("diet_id", "category_id"),

  CONSTRAINT "diet_restricted_categories_diet_id_fkey"
    FOREIGN KEY ("diet_id")
    REFERENCES "diets" ("id"),

  CONSTRAINT "diet_restricted_categories_category_id_fkey"
    FOREIGN KEY ("category_id")
    REFERENCES "ingredient_categories" ("id")
);

CREATE TABLE "user_diets" (
  "user_id" varchar NOT NULL,
  "diet_id" integer NOT NULL,
  "created_at" timestamptz DEFAULT now(),

  PRIMARY KEY ("user_id", "diet_id"),

  CONSTRAINT "user_diets_user_id_fkey"
    FOREIGN KEY ("user_id")
    REFERENCES "users" ("id")
    ON DELETE CASCADE,

  CONSTRAINT "user_diets_diet_id_fkey"
    FOREIGN KEY ("diet_id")
    REFERENCES "diets" ("id")
);

CREATE TABLE "ingredient_unit_conversions" (
  "ingredient_id" integer NOT NULL,
  "unit" varchar(16) NOT NULL,
  "grams" numeric NOT NULL
    CHECK (grams > 0),
  "created_at" timestamptz DEFAULT now(),

  PRIMARY KEY ("ingredient_id", "unit"),

  CONSTRAINT "ingredient_unit_conversions_ingredient_id_fkey"
    FOREIGN KEY ("ingredient_id")
    REFERENCES "ingredients" ("id"),

  CONSTRAINT "ingredient_unit_conversions_unit_fkey"
    FOREIGN KEY ("unit")
    REFERENCES "units" ("code")
);

CREATE TABLE "nutrition_facts" (
  "ingredient_id" integer PRIMARY KEY,
  "calories" numeric NOT NULL
    CHECK (calories >= 0),
  "protein" numeric NOT NULL
    CHECK (protein >= 0),
  "fat" numeric NOT NULL
    CHECK (fat >= 0),
  "carbs" numeric NOT NULL
    CHECK (carbs >= 0),
  "base_unit" varchar(16) NOT NULL,
  "created_at" timestamptz DEFAULT now(),

  CONSTRAINT "nutrition_facts_ingredient_id_fkey"
    FOREIGN KEY ("ingredient_id")
    REFERENCES "ingredients" ("id"),

  CONSTRAINT "nutrition_facts_base_unit_fkey"
    FOREIGN KEY ("base_unit")
    REFERENCES "units" ("code")
);


CREATE TABLE "ingredient_portions" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "ingredient_id" integer NOT NULL,

  "name" varchar NOT NULL,
  "weight_in_grams" numeric NOT NULL
    CHECK (weight_in_grams > 0),
  "created_at" timestamptz DEFAULT now(),

  CONSTRAINT "ingredient_portions_ingredient_id_fkey"
    FOREIGN KEY ("ingredient_id")
    REFERENCES "ingredients" ("id")
);

CREATE TABLE "favorites" (
  "user_id" varchar NOT NULL,
  "recipe_id" integer NOT NULL,
  "created_at" timestamptz DEFAULT now(),

  PRIMARY KEY ("user_id", "recipe_id"),

  CONSTRAINT "favorites_user_id_fkey"
    FOREIGN KEY ("user_id")
    REFERENCES "users" ("id")
    ON DELETE CASCADE,

  CONSTRAINT "favorites_recipe_id_fkey"
    FOREIGN KEY ("recipe_id")
    REFERENCES "recipes" ("id")
    ON DELETE CASCADE
);

CREATE TABLE "recipe_shares" (
  "user_id" varchar NOT NULL,
  "recipe_id" integer NOT NULL,
  "created_at" timestamptz DEFAULT now(),

  PRIMARY KEY ("user_id", "recipe_id"),

  CONSTRAINT "recipe_shares_user_id_fkey"
    FOREIGN KEY ("user_id")
    REFERENCES "users" ("id")
    ON DELETE CASCADE,

  CONSTRAINT "recipe_shares_recipe_id_fkey"
    FOREIGN KEY ("recipe_id")
    REFERENCES "recipes" ("id")
    ON DELETE CASCADE
);

CREATE TABLE "recipe_media" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "recipe_id" integer NOT NULL,
  "type" varchar(16) NOT NULL
    CHECK (type IN ('image', 'video')),
  "url" varchar(2048) NOT NULL,
  "position" integer NOT NULL
    CHECK (position >= 0),
  "created_at" timestamptz DEFAULT now(),

  CONSTRAINT "recipe_media_recipe_id_fkey"
    FOREIGN KEY ("recipe_id")
    REFERENCES "recipes" ("id")
    ON DELETE CASCADE
);

CREATE TABLE "recipe_reviews" (
  "id" integer GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "recipe_id" integer NOT NULL,
  "author_id" varchar NULL,
  "body" text NOT NULL,
  "is_deleted" boolean NOT NULL DEFAULT false,
  "created_at" timestamptz DEFAULT now(),
  "updated_at" timestamptz DEFAULT now(),

  CONSTRAINT "recipe_reviews_recipe_id_fkey"
    FOREIGN KEY ("recipe_id")
    REFERENCES "recipes" ("id")
    ON DELETE CASCADE,

  CONSTRAINT "recipe_reviews_author_id_fkey"
    FOREIGN KEY ("author_id")
    REFERENCES "users" ("id")
    ON DELETE SET NULL
);


CREATE TABLE "recipe_ratings" (
  "user_id" varchar NOT NULL,
  "recipe_id" integer NOT NULL,
  "rating" smallint NOT NULL CHECK (rating BETWEEN 1 AND 5),
  "created_at" timestamptz DEFAULT now(),
  "updated_at" timestamptz DEFAULT now(),

  PRIMARY KEY ("user_id", "recipe_id"),

  CONSTRAINT "recipe_ratings_user_id_fkey"
    FOREIGN KEY ("user_id")
    REFERENCES "users" ("id")
    ON DELETE CASCADE,

  CONSTRAINT "recipe_ratings_recipe_id_fkey"
    FOREIGN KEY ("recipe_id")
    REFERENCES "recipes" ("id")
    ON DELETE CASCADE
);

CREATE UNIQUE INDEX ON "recipe_categories" ("category_type_id", "code");

CREATE UNIQUE INDEX ON "ingredient_portions" ("ingredient_id", "name");

CREATE UNIQUE INDEX ON "recipe_media" ("recipe_id", "position");

CREATE INDEX ON "recipe_reviews" ("recipe_id", "created_at");

COMMENT ON COLUMN "users"."id" IS 'User ID from auth service (UUID, for example)';

COMMENT ON COLUMN "users"."avatar" IS 'Original pic is stored in the DB, we need to set the limit for the size';

COMMENT ON COLUMN "users"."status" IS 'online | offline (visible only to mutual followers)';

COMMENT ON COLUMN "users"."role" IS 'admin | user | guest';

COMMENT ON COLUMN "users"."updated_at" IS 'Used to detect profile changes or reset cache';

COMMENT ON COLUMN "followers"."user_id" IS 'User who follows';

COMMENT ON COLUMN "followers"."followed_id" IS 'User being followed';

COMMENT ON COLUMN "recipes"."description" IS 'Short recipe summary or preview text';

COMMENT ON COLUMN "recipes"."instructions" IS 'Full step-by-step cooking instructions';

COMMENT ON COLUMN "recipes"."spiciness" IS '0 = none, 1 = mild, 2 = medium, 3 = hot';

COMMENT ON COLUMN "recipes"."author_id" IS 'Reference to users.id (auth service user ID)';

COMMENT ON COLUMN "recipes"."status" IS 'draft | published | archived';

COMMENT ON COLUMN "recipes"."rating_avg" IS 'Average rating (1.0–5.0)';

COMMENT ON COLUMN "recipes"."rating_count" IS 'Total number of ratings';

COMMENT ON COLUMN "recipe_ingredients"."amount" IS 'Ingredient amount';

COMMENT ON COLUMN "recipe_ingredients"."unit" IS 'g, ml, pcs, etc.';

COMMENT ON COLUMN "recipe_category_types"."code" IS 'meal_time, dish_type, main_ingredient, cuisine';

COMMENT ON COLUMN "ingredient_categories"."code" IS 'nuts, dairy, meat, fish, grains, spices';

COMMENT ON COLUMN "allergens"."code" IS 'nuts, lactose, gluten, eggs';

COMMENT ON COLUMN "diets"."code" IS 'vegan, vegetarian';

COMMENT ON COLUMN "recipe_shares"."user_id" IS 'User who shared the recipe';

COMMENT ON COLUMN "recipe_media"."type" IS 'image | video';

COMMENT ON COLUMN "recipe_reviews"."author_id" IS 'users.id';

COMMENT ON COLUMN "recipe_ratings"."user_id" IS 'User who rated the recipe';

COMMENT ON COLUMN "recipe_ratings"."rating" IS '1–5 stars';
